added navbar in progress

--- a/mainWeb/src/index.html
+++ b/mainWeb/src/index.html
@@ -8,6 +8,17 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+  <div class="navBar">
+    <h3>Audrey Norris</h3>
+    <h4>Game and Software Developer</h4>
+    <div class="spacer">
+      <a href="">Contact</a>
+      <a href="">About</a>
+      <a class="active" href="#home">Home</a>
+    </div>
+    
+  </div>
+  
+  <!--<app-root></app-root>-->
 </body>
 </html>
