Added new areas
-Added new styles
-testing new font
-Added info to pages

--- a/index.html
+++ b/index.html
@@ -2,78 +2,193 @@
 
 <html>
 
-    <head>
-        <title>Audrey Norris</title>
-        <link rel="stylesheet" href="styles.css">
-    </head>
-    <body>
-        <div id="navBar">
-            <div id="leftSide">
-                <h1>Audrey Norris -</h1>
-                <h2>Programmer/Designer</h2>
-            </div>
-            <div id="rightSide">
-                <ul>
-                    <li>Projects</li>
-                    <li>Contact</li>
-                </ul>
-            </div>
-        </div>
-        <div id="">
+<head>
+    <title>Audrey Norris</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" /> 
 
+</head>
+
+<body>
+    <div id="navBar">
+        <div id="leftSide">
+            <a href="index.html">
+            <h1>Audrey Norris - Programmer/Designer</h1>
+            </a>
         </div>
-        <div id="mainBody">
-            <div id="header">
-                    <img src="images/profilepic.jpg" alt="Audrey Norris">
+        <div id="rightSide">
+            <ul>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href = "https://sites.google.com/view/audreynorrisportfolio">Old Portfolio</a></li>
+                <li><a href = "mailto:audreynorris@u.boisestate.edu?subject = Feedback&body = Message"><i class="fa-regular fa-envelope"></i></a></li>
+            </ul>
+        </div>
+    </div>
+    <div id="Banner">
+        <img src="images/Banner.gif" alt="Banner">
+        <div>
+            <h1>Audrey Norris</h1>
+            <h4>Programmer/Designer</h4>
+            <hr />
+            <h5>I'm a passionate programmer and game designer who has experience with art and programming.</h5>
+        </div>
+    </div>
+    <div id="mainBody">
+        <div id="header">
+            <img src="images/profilepic.jpg" alt="Audrey Norris">
+            <div>
+                <h1>Audrey Norris</h1>
+                <h4>Programmer/Designer</h4>
+                <p>
+                    Hi! I am a currently learning and working as a system designer
+                    and programmer for GIMMWorks. I am working towards a degree
+                    in Games Interactive Media and Mobile Technologies (GIMM).
+                    I want to build software that can help other people just
+                    like the many games that have helped change my life.
+                </p>
+                <p>
+                    Outside of work I like playing videogames, reading,
+                    writing, and drawing. I also enjoy learning leadership and
+                    serve as the current National College/Postsecondary President for
+                    SkillsUSA Idaho.
+
+                </p>
+                <p>
+                    Below is my skills and experiences from my work over the years.
+                </p>
+            </div>
+        </div>
+        <hr />
+        <!--NOTE WILL BE ADDING A RESUME PAGE TO FLIP TO LATER ON-->
+        <div id="resume">
+            <button type="button" class="collapsible">Resume</button>
+            <div class="collapse">
                 <div>
-                    <h1>Audrey Norris</h1>
-                    <h4>Programmer/Designer</h4>
-                    <p>
-                        Hi! I am a currently learning and working as a system designer 
-                        and programmer for GIMMWorks. I am working towards a degree 
-                        in Games Interactive Media and Mobile Technologies (GIMM).
-                    </p>
-                    <p>
-                        Below is my skills and experiences from my work over the years.
-                    </p>
+                    <h2>Education</h2>
+                    <ul>
+                        <li>CTE High School Diploma - Meridian Technical Charter 2022</li>
+                        <li>Bachelor of Science Degree in GIMM - Boise State University 2026</li>
+                    </ul>
+                </div>
+                <hr />
+                <div>
+                    <h2>Skills</h2>
+                    <h4>Programming Languages</h4>
+                    <ul>
+                        <li>C#</li>
+                        <li>Java</li>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>JavaScript</li>
+                        <li>React</li>
+                    </ul>
+                    <h4>Engines</h4>
+                    <ul>
+                        <li>Unity</li>
+                        <li>Construct 3</li>
+                    </ul>
+                    <h4>Adobe Software</h4>
+                    <ul>
+                        <li>Illustrator</li>
+                        <li>Photoshop</li>
+                        <li>Substance Painter</li>
+                    </ul>
+                </div>
+                <hr />
+                <div>
+                    <h2>Experience</h2>
+                    <ul>
+                        <li>Software Developer and Intern • Nerdy Dragon • January 2022-Present</li>
+                        <li>Code Sensei • Code Ninjas • August 2020-Present</li>
+                    </ul>
+                </div>
+                <hr />
+                <div>
+                    <h2>Certifications</h2>
+                    <ul>
+                        <li>OSHA 10 Hour General Industry - 2021</li>
+                        <li>Microsoft Office Specialist: Excel, Word and PowerPoint - 2021</li>
+                        <li>Introduction To Programming Using HTML and CSS - 2020</li>
+                        <li>IC3 Digital Literacy - 2019</li>
+                    </ul>
+                </div>
+                <hr />
+                <div>
+                    <h2>Extracuriculars</h2>
+                    <h4>Boise State Esports Arena</h4>
+                    <ul>
+                        <li>Esports Shout Caster - 2022-2023</li>
+                    </ul>
+                    <h4>SkillsUSA</h4>
+                    <ul>
+                        <li>National College/PostSecondary President 2023-2024</li>
+                        <li>Idaho Post Secondary State President 2022-2023</li>
+                        <li>Idaho High School State President 2021-2022</li>
+                        <li>Local Chapter President 2020-2021</li>
+                        <li>Local Chapter Secretary 2019-2020</li>
+                    </ul>
+                    <h4>Student Government</h4>
+                    <ul>
+                        <li>Grade Level Representative 2018-2022</li>
+                        <li>Local Vice President 2020-2021</li>
+                    </ul>
                 </div>
             </div>
-            <hr/>
-            <!--NOTE WILL BE ADDING A RESUME PAGE TO FLIP TO LATER ON-->
-            <div id="resume">
+            <button type="button" class="collapsible">Projects</button>
+            <div class="collapse">
                 <h1>Projects</h1>
                 <div class="portfolio">
                     <img src="https://picsum.photos/id/870/200/300?grayscale&blur=2">
                     <div>
-                        <h1>Project 1</h1>
+                        <h2>Project 1</h2>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod 
-                            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
-                            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                             Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-                             fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in 
-                             culpa qui officia deserunt mollit anim id est laborum.
+                            fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+                            culpa qui officia deserunt mollit anim id est laborum.
                         </p>
                     </div>
                 </div>
-                <br/>
+                <br />
+                <hr />
+                <br />
                 <div class="portfolio">
                     <img src="https://picsum.photos/id/870/200/300?grayscale&blur=2">
                     <div>
-                        <h1>Project 2</h1>
+                        <h2>Project 2</h2>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod 
-                            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
-                            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                             Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-                             fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in 
-                             culpa qui officia deserunt mollit anim id est laborum.
+                            fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+                            culpa qui officia deserunt mollit anim id est laborum.
                         </p>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
 
-    </body>
+    <script>
+        var coll = document.getElementsByClassName("collapsible");
+        var i;
+
+        for (i = 0; i < coll.length; i++) {
+            coll[i].addEventListener("click", function () {
+                this.classList.toggle("active");
+                var content = this.nextElementSibling;
+                if (content.style.display === "block") {
+                    content.style.display = "none";
+                } else {
+                    content.style.display = "block";
+                }
+            });
+        }
+
+    </script>
+</body>
 
 </html>
