--- a/contact.html
+++ b/contact.html
@@ -5,17 +5,18 @@
     <head>
         <title>Audrey Norris</title>
         <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" /> 
     </head>
     <body>
         <div id="navBar">
             <div id="leftSide">
-                <h1>Audrey Norris -</h1>
-                <h2>Programmer/Designer</h2>
+                <a href="index.html">
+                <h1>Audrey Norris - Programmer/Designer</h1>
+                </a>
             </div>
             <div id="rightSide">
                 <ul>
-                    <li>Projects</li>
-                    <li>Contact</li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
         </div>
