added to contact form

--- a/contact.html
+++ b/contact.html
@@ -2,11 +2,14 @@
 
 <html>
 
-    <head>
-        <title>Audrey Norris</title>
-        <link rel="stylesheet" href="styles.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" /> 
-    </head>
+<head>
+    <title>Audrey Norris</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" /> 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+</head>
+
     <body>
         <div id="navBar">
             <div id="leftSide">
@@ -20,23 +23,26 @@
                 </ul>
             </div>
         </div>
-            <div id="contact">
+            <div id="contact" class="mh-100">
                 <h1>Contact Me</h1>
                 <h3>Need some work done? Contact me here!</h3>
-                <div>
+                <div class="row">
                     <label>Name:</label>
                     <br/>
-                    <input type="text"/>
+                    <input type="text" class="rounded-2"/>
                 </div>
-                <div>
+                <div class="row">
                     <label>Email:</label>
                     <br/>
-                    <input type="email"/>
+                    <input type="email" class="rounded-2"/>
                 </div>
-                <div>
+                <div class="row">
                     <label>Question:</label>
                     <br/>
-                    <textarea> </textarea>
+                    <textarea class="rounded-2"> </textarea>
+                </div>
+                <div class="row">
+                    <button class="btn btn-danger">Submit</button>
                 </div>
 
             </div>
