Updated Contact Page More

--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 </head>
 
     <body>
-        <div id="navBar">
+        <div id="navBar" class="sticky-top">
             <div id="leftSide">
                 <a href="index.html">
                 <h1>Audrey Norris - Programmer/Designer</h1>
@@ -20,13 +20,17 @@
             <div id="rightSide">
                 <ul>
                     <li><a href="contact.html">Contact</a></li>
+                    <li><a href = "https://sites.google.com/view/audreynorrisportfolio">Old Portfolio</a></li>
+                    <li><a href = "mailto:audreynorris@u.boisestate.edu?subject = Feedback&body = Message"><i class="fa-regular fa-envelope"></i></a></li>
                 </ul>
             </div>
         </div>
+        <div class="d-flex">
             <div id="contact" class="mh-100">
                 <h1>Contact Me</h1>
                 <h3>Need some work done? Contact me here!</h3>
-                <div class="row">
+                <div class="mx-auto">
+                    <div class="row">
                     <label>Name:</label>
                     <br/>
                     <input type="text" class="rounded-2"/>
@@ -42,10 +46,14 @@
                     <textarea class="rounded-2"> </textarea>
                 </div>
                 <div class="row">
-                    <button class="btn btn-danger">Submit</button>
+                    <button class="btn">Submit</button>
                 </div>
-
+                </div>
+            
             </div>
+            <div id="contact-img"><img src="images/Contact.jpg" /></div>
+        </div>
+            
 
     </body>
 
