--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <div id="navBar">
+    <div id="navBar" class="sticky-top">
         <div id="leftSide">
             <a href="index.html">
             <h1>Audrey Norris - Programmer/Designer</h1>
