--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-
+<meta name='viewport' content='width=device-width, initial-scale=1' />
 <html>
 
 <head>
@@ -36,7 +36,7 @@
     </div>
     <div id="mainBody">
         <div id="header">
-            <img src="images/profilepic.jpg" alt="Audrey Norris">
+            <img src="images/profilepic.jpg" class="img-fluid w-25" alt="Audrey Norris">
             <div>
                 <h1>Audrey Norris</h1>
                 <h4>Programmer/Designer</h4>
@@ -139,34 +139,66 @@
             <div class="collapse">
                 <h1>Projects</h1>
                 <div class="portfolio">
-                    <img src="https://picsum.photos/id/870/200/300?grayscale&blur=2">
-                    <div>
-                        <h2>Project 1</h2>
+                    <img src="images/DinoDice.png" class="img-fluid w-50">
+                    <div class="w-75">
+                        <h2>Dino Dice</h2>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-                            fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-                            culpa qui officia deserunt mollit anim id est laborum.
+                            Dino Dice is the first project I worked on during my internship at Nerdy Dragon. The goal of the project was to create a virtual version of some 
+                            math exercises DMTI had created. I created this project in Construct 3 and was the sole programmer and game designer for this project. 
+                            I did not create the graphics for this game but I did create the sounds that play when you get and answer right or wrong. 
+                            It is now available on the Apple Store and will be available on Google Play soon.
                         </p>
+                        <div class="container-fluid">
+                            <div>
+                                <h3>Software Used</h3>
+                                <ul>
+                                    <li>Construct 3</li>
+                                    <li>Paint 3D</li>
+                                    <li>X-Code</li>
+                                </ul>
+                            </div>
+                            <div>
+                                <h3>Skills Used</h3>
+                                <ul>
+                                    <li>Construct 3</li>
+                                    <li>Paint 3D</li>
+                                    <li>X-Code</li>
+                                </ul>
+                            </div>
+                            <button class="btn btn-primary"><a href="dino.html" >View Full Page</a></button>
+                        </div>
                     </div>
                 </div>
                 <br />
                 <hr />
                 <br />
                 <div class="portfolio">
-                    <img src="https://picsum.photos/id/870/200/300?grayscale&blur=2">
+                    <img src="images/WrenchFront.jpg" class="img-fluid w-50">
                     <div>
-                        <h2>Project 2</h2>
+                        <h2>Arcanic</h2>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-                            fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-                            culpa qui officia deserunt mollit anim id est laborum.
+                            Arcanic was the second game that my partner and I competed with in the SkillsUSA State and National competitions. In this game you play as Wrench an Inxo protector of ancient magical relics and while on patrol one day a villain tries to steal them! Wrench tries to fight the villain to get them back but the artifacts react and teleport them both to a previously unknown island. It's now up to Wrench to get the relics back and stop the villain before it's to late. <br/>
+                            In this game I was the primary designer and lead a team of designers who assisted me with different aspects of the UI and character design. My partner and I worked on the actual game mechanics and concept together. <br/>
+                            Arcanic won 1st place at the state level and then went on to get 1st place at the national level for our competition.
                         </p>
+                        <div class="container-fluid">
+                            <div>
+                                <h3>Software Used</h3>
+                                <ul>
+                                    <li>Illustrator</li>
+                                    <li>Maya</li>
+                                    <li>Adobe Substance Painter 3D </li>
+                                </ul>
+                            </div>
+                            <div>
+                                <h3>Skills Used</h3>
+                                <ul>
+                                    <li>3D Modeling</li>
+                                    <li>Illustration</li>
+                                    <li>Brainstorming</li>
+                                </ul>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
