--- a/dino.html
+++ b/dino.html
@@ -26,6 +26,58 @@
         </div>
     </div>
     <div id="mainBody">
+        <h1>Dino Dice</h1>
+        <p>Dino Dice was a mobile phone app I created while working for a company named Nerdy Dragon. I learned how to use Construct 3, JSON storage structures, and how to communicate with clients.</p>
+    
+        <div class="row">
+            <div id="dinoDiceCarousel" class="carousel slide col-6" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="images/Dino1.png" class="d-block w-100 img-fluid" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="images/Dino2.png" class="d-block w-100 img-fluid" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="images/Dino3.png" class="d-block w-100 img-fluid" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="images/Dino4.png" class="d-block w-100 img-fluid" alt="...">
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#dinoDiceCarousel" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#dinoDiceCarousel" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>
+              <div class="col-6">
+                <p>
+                    Dino Dice is the first project I worked on during my internship at Nerdy Dragon. The goal of the project was to create a virtual version of some math exercises DMTI
+                     had created. I created this project in Construct 3 and was the sole programmer and game designer for this project. I did not create the graphics for this game but I 
+                     did create the sounds that play when you get and answer right or wrong. It is now available on the Apple Store and Google Play.
+                </p>
+                <a href="https://apps.apple.com/us/app/dino-dice/id1626674361"><button>Apple</button></a>
+                <a href="https://play.google.com/store/apps/details?id=com.dmtinstitute.dinodice"><button>Android</button></a>
+                <h3>Tools Used:</h3>
+                <ul>
+                    <li>Construct 3</li>
+                    <li>X Code</li>
+                    <li> Paint 3D</li>
+                </ul>
+                <h3>Skills Learned:</h3>
+                <ul>
+                    <li>Client communication</li>
+                    <li>App Testing</li>
+                    <li>Block Coding</li>
+                    <li>JSON Storage</li>
+                    <li>Mobile App Development</li>
+                </ul>
+              </div>
+        </div>
         
     </div>
     <script>
