Added more info

--- a/dino.html
+++ b/dino.html
@@ -79,6 +79,18 @@
               </div>
         </div>
         
+    <div>
+      <h2>Process</h2>
+      <p>
+        To make this game I created three different scripted scenes within Construct 3: Menu, game and results. 
+        The main menu houses all the level selects and the audio options for the students. When the game starts it heads to that menu and checks to see if their is previous level data. 
+        If there isn't it creates a new storing system and if there is it loads the data and unlocks levels accordingly. 
+        Players can then cycle through game modes and levels before moving to the game screen. When the game scene loads it checks to see what level type the player selected and then 
+        runs the proper script for the level. Each of the four game modes has a separate script that goes through each part of the levels. Finally the results screen pulls 
+        the data from the level that was completed and shows the player their score. A player is then given the option to go to the next level or back to the home screen.
+      </p>
+    </div>
+
     </div>
     <script>
         var coll = document.getElementsByClassName("collapsible");
